Fixed wrap up image

--- a/duolingo/duolingo-dark/duolingo-dark.user.css
+++ b/duolingo/duolingo-dark/duolingo-dark.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           Duolingo - Dark Theme
 @description    Dark theme for Duolingo.
-@version        2022.11.19.12.04
+@version        2022.11.24.17.24
 @author         MetalTxus
 @namespace      https://github.com/jesuscc1993/
 @license        CC BY-SA 4.0
@@ -38,6 +38,8 @@
 
 	/* unit test */
 	._145Ci,
+	/* wrap up */
+	._23sc9,
 	._1LdIi,
 	._1ualb,
 	._3DWgD,
